--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <link href="css/fontawesome.min.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1></h1>
+    <div class="main-container">
+        <div class="box">
+            <img src="Images/crazy-sports-man-funny-expression.jpg" alt="">
+            <h1>Amit Paul</h1>
+            <h3>Web Developer, BD</h3>
+            <ul>
+                <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+
+                <li><a href=""><i class="fa-brands fa-square-twitter"></i></a></li>
+                
+                <li><a href=""><i class="fa-brands fa-linkedin"></i></a></li>
+
+                <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+
+                <li><a href=""><i class="fa-brands fa-github"></i></a></li>
+
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
