--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css" type="text/css">
-    <link href="css/fontawesome.min.css" rel="stylesheet" type="text/css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="main-container">
@@ -14,15 +14,15 @@
             <h1>Amit Paul</h1>
             <h3>Web Developer, BD</h3>
             <ul>
-                <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
 
-                <li><a href=""><i class="fa-brands fa-square-twitter"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                 
-                <li><a href=""><i class="fa-brands fa-linkedin"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
 
-                <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
 
-                <li><a href=""><i class="fa-brands fa-github"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
 
             </ul>
         </div>
