--- a/index.html
+++ b/index.html
@@ -10,21 +10,24 @@
 <body>
     <div class="main-container">
         <div class="box">
-            <img src="Images/crazy-sports-man-funny-expression.jpg" alt="">
-            <h1>Amit Paul</h1>
-            <h3>Web Developer, BD</h3>
-            <ul>
-                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+            <img class="man-image"
+            src="Images/crazy-sports-man-funny-expression.jpg" alt="">
+            <h1 class="text1">Amit Paul</h1>
+            <h3 class="text2">Web Developer, BD</h3>
+            <ul class="icons">
+                <li><a href="https://www.faceboook.com/amit600" target="_blank"><i class="fab fa-facebook"></i></a></li>
 
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
                 
-                <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
 
-                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="https://www.instagram.com/amit.pl" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
 
-                <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
+                <li><a href="https://www.github.com/amitpaul9" target="_blank"><i class="fa-brands fa-github"></i></a></li>
 
             </ul>
+
+            <button><a href="atamit905@gmail.com" target="_blank" id="hireme">Hire Me</a></button>
         </div>
     </div>
 </body>
